<resources>
    <string name="app_name">JavaProject5777</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_psd">Confirm Password</string>
    <string name="remember">remember me</string>
    <string name="connect">Sign in</string>
    <string name="newUser">Sign up</string>
    <string name="text_view_add">DON\'T HAVE ACCOUNT?</string>
    <string name="image_containt_description">the Logo</string>
    <string name="email_business">Email</string>
    <string name="id_business">Id</string>
    <string name="phonenumber">Phone number</string>
    <string name="business_link">Link</string>
    <string name="business_name">Name</string>
    <string name="business_address">Address</string>
    <string name="business_City">City</string>
    <string name="business_country">Country</string>
    <string name="business_zipCode">Zip code</string>
    <string name="btn_add">Add</string>
    <string name="type_activities">Activity type:</string>
    <string-array name="typeActivities_combo">
        <item>Vacation package</item>
        <item>Entertainment</item>
        <item>Cruise</item>
        <item>Ski</item>
        <item>Tourist</item>
    </string-array>
    <string name="activity_price">Price</string>
    <string name="activity_businessId">Business id</string>
    <string name="activity_description">Description</string>
    <string name="start">Start:</string>
    <string name="finish">Finish:</string>
    <string name="create_account">Create Account</string>
    <string name="add_business">Add business</string>
    <string name="add_activity">Add activity</string>
</resources>
