<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/b"

    tools:context="com.example.nadav.javaproject5777.controller.Login"
    android:weightSum="1">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/monlogo2"
            android:layout_weight="0.63"
            android:contentDescription="@string/image_containt_description"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:inputType="textImeMultiLine"
            android:layout_gravity="center"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="numberPassword"
            android:hint="@string/password"/>
        <CheckBox
            android:id="@+id/remember"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="40dp"
            android:duplicateParentState="false"
            android:text="@string/remember"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:checked="false"
            android:fontFamily="sans-serif" />

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/connect"
            tools:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView"
            android:text="@string/text_view_add"
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:textSize="12sp" />


        <Button
            android:id="@+id/newUser"
            android:text="@string/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
             />


</LinearLayout>

