<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#bebebe"
    android:weightSum="1"
    tools:context="com.example.nadav.javaproject5777.controller.AddUser">



    <TextView
        android:text="Create Account"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/textView_Account"
         />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:src="@drawable/ic_account_circle_black_24dp"
        android:id="@+id/imageView" />

    <EditText
        android:id="@+id/editText_addUser"
        android:hint="@string/username"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        />

    <EditText
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"

        android:id="@+id/editText_addPassword" />

    <EditText
        android:hint="@string/confirm_psd"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="25dp"

        android:id="@+id/editText_confirmPassword" />

    <Button
        android:text="@string/newUser"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_addUser" />
</LinearLayout>