<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="top"


    android:weightSum="1"
    tools:context="com.example.nadav.javaproject5777.controller.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--android:alpha="0.4"-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="142dp"
    android:background="@color/colorPrimary"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/imageView" />
    <TextView
        android:text="Activity"
        android:textSize="30dp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/textviewTitleActivity" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/type_activities"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_type" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:spinnerMode="dialog"
            android:entries="@array/typeActivities_combo"
            android:layout_marginBottom="15dp"
            android:id="@+id/spinner_typeActivities" />


    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="15dp"
    android:orientation="horizontal">

    <TextView
        android:text="@string/start"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:textSize="18dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStart" />

    <TextView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/txtDateStart"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ffffff"
        app:srcCompat="@android:drawable/ic_menu_month"
        android:id="@+id/imageButton_start" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">
    <TextView
        android:text="@string/finish"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:textSize="18dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFinish" />
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/txtDateFinish"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_month"
        android:id="@+id/imageButton_finish" />
</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/priceActivity"
            android:hint="@string/activity_price"
            android:backgroundTint="@color/common_action_bar_splitter"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            />

        <Spinner
            android:layout_weight="1"
            android:inputType="number"
            android:id="@+id/businessId_activity"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            android:layout_width="match_parent"></Spinner>
    </LinearLayout>


    <EditText
        android:hint="@string/business_country"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/common_action_bar_splitter"
        android:inputType="textCapWords"
        android:id="@+id/country_activity" />

    <EditText
        android:hint="@string/activity_description"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/common_action_bar_splitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapSentences"
        android:id="@+id/description" />

    <Button
        android:text="@string/btn_add"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_addActivity"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:textSize="20dp"
        />
</LinearLayout>
</ScrollView>